--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,3 +85,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects = (OldName="/Script/MapWizard.MapParams.water_stage",NewName="/Script/MapWizard.MapParams.water_type")
