added building texture

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap = /Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Terrain1.Terrain1
+EditorStartupMap=/Game/Terrain1.Terrain1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI = DefaultGraphicsRHI_DX12
@@ -87,3 +89,4 @@ ManualIPAddress =
 [CoreRedirects]
 +PropertyRedirects = (OldName="/Script/MapWizard.MapParams.water_stage",NewName="/Script/MapWizard.MapParams.water_type")
 +EnumRedirects = (OldName="/Script/MapWizard.EDrawStage",ValueChanges=(("process_blocks","process_districts")))
+
