made a new camera moving!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap = /Engine/Maps/Templates/OpenWorld
 GameDefaultMap=/Game/Terrain1.Terrain1
 EditorStartupMap=/Game/Terrain1.Terrain1
+GlobalDefaultGameMode = /Script/Engine.GameModeBase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI = DefaultGraphicsRHI_DX12
@@ -89,4 +90,5 @@ ManualIPAddress =
 [CoreRedirects]
 +PropertyRedirects = (OldName="/Script/MapWizard.MapParams.water_stage",NewName="/Script/MapWizard.MapParams.water_type")
 +EnumRedirects = (OldName="/Script/MapWizard.EDrawStage",ValueChanges=(("process_blocks","process_districts")))
++ClassRedirects = (OldName="/Script/MapWizard.OrthographicCameraActor",NewName="/Script/MapWizard.OrthographicCameraPawn")
 
