--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,26 @@
 
+
 [/Script/EngineSettings.GeneralProjectSettings]
+CompanyName=
+CompanyDistinguishedName=
+CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
+Description=This is the project about making roleplaying maps
+Homepage=
+LicensingTerms=
+PrivacyPolicy=
 ProjectID=350B2AF74AD0C5DEEC3F5D88CE98FEB0
+ProjectName=MapWizard
+ProjectVersion=0.0.0.1
+SupportContact=
+ProjectDisplayedTitle=
+ProjectDebugTitleInfo=
+bShouldWindowPreserveAspectRatio=True
+bUseBorderlessWindow=False
+bStartInVR=False
+bAllowWindowResize=True
+bAllowClose=True
+bAllowMaximize=True
+bAllowMinimize=True
+EyeOffsetForFakeStereoRenderingDevice=0.032000
+FOVForFakeStereoRenderingDevice=90.000000
+
