--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap = /Engine/Maps/Templates/OpenWorld
 GameDefaultMap=/Game/Terrain1.Terrain1
-EditorStartupMap=/Game/Terrain1.Terrain1
+EditorStartupMap=/Game/Terrain1_1.Terrain1_1
 GlobalDefaultGameMode = /Script/Engine.GameModeBase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -59,6 +59,7 @@ TargetedHardwareClass = Desktop
 AppliedTargetedHardwareClass = Desktop
 DefaultGraphicsPerformance = Maximum
 AppliedDefaultGraphicsPerformance = Maximum
+DefaultGraphicsPerformance=Maximum
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass = Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
