--- a/MapWizard.uproject
+++ b/MapWizard.uproject
@@ -21,5 +21,13 @@
 				"Editor"
 			]
 		}
+	],
+	"TargetPlatforms": [
+		"Android",
+		"IOS",
+		"Linux",
+		"LinuxArm64",
+		"Mac",
+		"Windows"
 	]
 }
