--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap = /Engine/Maps/Templates/OpenWorld
-GameDefaultMap=/Game/Terrain1.Terrain1
+GameDefaultMap=/Game/Terrain1_1.Terrain1_1
 EditorStartupMap=/Game/Terrain1_1.Terrain1_1
 GlobalDefaultGameMode = /Script/Engine.GameModeBase
 
