added selection functions, added dividing(semi-working)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,4 +92,6 @@ ManualIPAddress =
 +PropertyRedirects = (OldName="/Script/MapWizard.MapParams.water_stage",NewName="/Script/MapWizard.MapParams.water_type")
 +EnumRedirects = (OldName="/Script/MapWizard.EDrawStage",ValueChanges=(("process_blocks","process_districts")))
 +ClassRedirects = (OldName="/Script/MapWizard.OrthographicCameraActor",NewName="/Script/MapWizard.OrthographicCameraPawn")
++FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllSelected",NewName="/Script/MapWizard.MainTerrain.GetAllDistrictsSelected")
++FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllRoadsSelected",NewName="/Script/MapWizard.MainTerrain.GetAllStreetsSelected")
 
