--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,3 +96,6 @@ ManualIPAddress =
 +FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllSelected",NewName="/Script/MapWizard.MainTerrain.GetAllDistrictsSelected")
 +FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllRoadsSelected",NewName="/Script/MapWizard.MainTerrain.GetAllStreetsSelected")
 
+[/Script/Engine.WorldPartitionSettings]
+RuntimeHashDefaultClass=/Script/CoreUObject.Class'/Script/Engine.WorldPartitionRuntimeHashSet'
+
