Camera control, interface hider

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -67,7 +67,6 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
-bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
 bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
@@ -82,8 +81,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=E)
-+AxisMappings=(AxisName="Zoom",Scale=-1.000000,Key=Q)
++AxisMappings=(AxisName="Ortho",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="Ortho",Scale=-1.000000,Key=Q)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
