add lighters (befor Alik test)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,6 +97,7 @@ ManualIPAddress =
 +ClassRedirects = (OldName="/Script/MapWizard.OrthographicCameraActor",NewName="/Script/MapWizard.OrthographicCameraPawn")
 +FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllSelected",NewName="/Script/MapWizard.MainTerrain.GetAllDistrictsSelected")
 +FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllRoadsSelected",NewName="/Script/MapWizard.MainTerrain.GetAllStreetsSelected")
++FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllpointObjects",NewName="/Script/MapWizard.MainTerrain.GetAllPointObjects")
 
 [/Script/Engine.WorldPartitionSettings]
 RuntimeHashDefaultClass=/Script/CoreUObject.Class'/Script/Engine.WorldPartitionRuntimeHashSet'
