--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,6 +98,8 @@ ManualIPAddress =
 +FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllSelected",NewName="/Script/MapWizard.MainTerrain.GetAllDistrictsSelected")
 +FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllRoadsSelected",NewName="/Script/MapWizard.MainTerrain.GetAllStreetsSelected")
 +FunctionRedirects=(OldName="/Script/MapWizard.MainTerrain.GetAllpointObjects",NewName="/Script/MapWizard.MainTerrain.GetAllPointObjects")
++StructRedirects=(OldName="/Script/MapWizard.PointObject",NewName="/Script/MapWizard.PointDrawingObject")
++StructRedirects=(OldName="/Script/MapWizard.PointObject",NewName="/Script/MapWizard.PointDrawingObject")
 
 [/Script/Engine.WorldPartitionSettings]
 RuntimeHashDefaultClass=/Script/CoreUObject.Class'/Script/Engine.WorldPartitionRuntimeHashSet'
