--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@ GameDefaultMap=/Game/Terrain1_1.Terrain1_1
 EditorStartupMap=/Game/Terrain1_1.Terrain1_1
 GlobalDefaultGameMode = /Script/Engine.GameModeBase
 GameInstanceClass=/Game/MyGameInstance.MyGameInstance_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI = DefaultGraphicsRHI_DX12
